--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1,8 +1,7 @@
-@import "~vue-material/dist/theme/engine"; // Import the theme engine
+$color-pack: false;
 
-@include md-register-theme("default", (
-  primary: #0099d6, // The primary color of your application
-  accent: #f6931e// The accent or secondary color
-));
+@import '~vuetify-scss';
 
-@import "~vue-material/dist/theme/all"; // Apply the theme
+.accent--text {
+  color: #f6931e;
+}
